// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitHubSettings component renders when not signed in 1`] = `
<div>
  <h4>
    GitHub
  </h4>
  <label
    key="signed-out-label"
  >
    We can publish your fiddles to GitHub as a Gist - that way you can share your fiddles with the world!
  </label>
  <button
    className="button"
    key="sign-in-button"
    onClick={[Function]}
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="sign-in-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
     Sign In
  </button>
</div>
`;

exports[`GitHubSettings component renders when signed in 1`] = `
<div>
  <h4>
    GitHub
  </h4>
  <label
    key="signed-in-label"
  >
    Using the personal access token you gave us, we logged you into GitHub as 
    Test User
    .
  </label>
  <button
    className="button"
    key="sign-out-button"
    onClick={[MockFunction]}
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="sign-out-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      title=""
      transform={null}
    />
     Remove Token & Sign Out
  </button>
</div>
`;
